cmake_minimum_required(VERSION 3.12)
project(Project4)

set(CMAKE_CXX_STANDARD 14)

add_executable(Project4 main.cpp Character.cpp Character.h Barbarian.cpp Barbarian.h Menu.h Menu.cpp Tournament.cpp Tournament.h BlueMen.cpp BlueMen.h HarryPotter.cpp HarryPotter.h Medusa.cpp Medusa.h Vampire.cpp Vampire.h inputValidation.h inputValidation.cpp)